fix (explorer): a bug where scrolling a track that's near the bottom of the explorer into view will cause the explorer to shift vertically a bit!

--- a/src/explorer/explorer.css
+++ b/src/explorer/explorer.css
@@ -7,8 +7,10 @@ explorer-container {
 }
 
 explorer {
-	grid-row-start: 1;
-	grid-column-start: 1;
+	grid-row: 1;
+	grid-column: 1;
+	position: sticky;
+	top: 0; /* :( fixes a weird bug where the explorer shifts upward a bit when scrollIntoView-ing an element that's near the bottom */
 	display: inline-flex;
 	overflow: auto;
 	padding-bottom: 64px;
